# optimal-tiling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  defs.cpp  defs.hpp  graph.cpp  graph.hpp  indexedList.hpp  indexedList.tpp  makefile  max_rectangles.txt  monteCarloSearch.cpp  optimizations.txt  resu  semiarray.hpp  subTree.cpp  subTree.hpp  symmetry_notes.txt  test.cpp  treeEnumerator.cpp  treeEnumerator_threaded.cpp
include/: border.hpp  concepts.hpp  config.hpp  enumerate_subtrees.hpp  graph.hpp  min_fast_type.hpp  ordered_index_set.hpp  permutation.hpp  semiarray.hpp  static_graph.hpp  subtree.hpp
notes_and_misc_code/: 3d-tiling.txt  5xn_proof.txt  current_max_tilings.txt  equiv_relation_enumerator.cpp  max_tiling_algorithm (copy).txt  max_tiling_algorithm.txt  optimal_tiling_v1.cpp  testEquiv.cpp
results/: results_1.txt  results_2.txt  results_3.txt  results_4.txt  results_5.txt  results_6.txt  results_7.txt
results_/: results_2.txt  results_4.txt  results_5.txt  results_6.txt  results_7.txt  results_8.txt
rust_src/: CMakeLists.txt  Cargo.toml
rust_src/src/: lib.rs
source/: border.cpp  enumerate_subtrees.cpp  induced_subtree_enumerate.cpp  maximum_subtree.cpp  permutation.cpp
src/: analyzer.cpp  defs.cpp  defs.hpp  equivRelation.cpp  equivRelation.hpp  fraction.cpp  fraction.hpp  graph.cpp  graph.hpp  indexedList.hpp  indexedList.tpp  minFastType.hpp  monteCarloSearch.cpp  optimal_cube.cpp  optimal_rectangle_matrix.cpp  optimal_tile.cpp  optimal_tiling.cpp  permutation.hpp  permutation.tpp  semiarray.hpp  set_of_minimums.hpp  slice.hpp  slice.tpp  slice_algo_base.hpp  slice_path.hpp  subTree.cpp  subTree.hpp  treeEnumerator.cpp  variadic-array.hpp
subgraphs/: 3x3x3_sponge.txt  7x7x7_sponge.txt
test/: reference_enumerator.cpp  test_border.cpp  test_enumerate.cpp  test_graph.cpp  test_ordered_index_set.cpp  test_parallel_enumerate.cpp  test_permutation.cpp  test_reference_enumerator.cpp  test_subgraph.cpp  test_subtree.cpp
test/include/: reference_enumerator.hpp  subtree_test_helpers.hpp
